--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
     "@eslint/js": "^9.11.0",
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
+    "@types/jest": "^29.5.13",
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
     "eslint": "^8.57.1",
-    "eslint-plugin-jest": "^27.6.1",
+    "eslint-plugin-jest": "^27.9.0",
     "eslint-plugin-react": "^7.36.1",
     "globals": "^15.9.0",
     "history": "^5.3.0",
