--- a/.github/workflows/piepline.yml
+++ b/.github/workflows/piepline.yml
@@ -13,5 +13,5 @@ jobs:
       - uses: actions/setup-node@v4
       - name: Install dependencies
         run: npm install
-      - name: Check styles
+      - name: Check style
         run: npm run eslint
